devops/kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-app
spec:
  type: ClusterIP
  selector:
    app: portfolio-app
  ports:
    - name: http
      port: 80
      targetPort: 8081
