devops/kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-postgres
spec:
  selector:
    app: portfolio-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
