devops/kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-redis
spec:
  selector:
    app: portfolio-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
