devops/kubernetes/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-app
spec:
  ingressClassName: nginx
  rules:
    - host: portfolio.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-app
                port:
                  number: 80
